--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "ngx-bootstrap": "^6.1.0",
     "ngx-cookie-service": "^10.0.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
